Tree and DL updated

--- a/List/Double_Linked_list/Makefile
+++ b/List/Double_Linked_list/Makefile
@@ -4,9 +4,11 @@ CC=g++
 CXXFLAGS=-std=c++11 -g
 LDFLAGS=-g
 
-Main: DLTree.o
+Main: DLTree.o DLNode.o
 
 DLTree.o: DLTree.hpp DLNode.hpp
+
+DLNode.o: DLNode.hpp
 
 clean:
     -f rm Main *.o core*
